* 2007-10-16 - sebastian.kauss@open-xchange.com

 - Bugfix #9219: Reminder popups: Appointment reminder has wrong text
 - Bugfix #9416: Calendar: Concurrency issue with Reminder 
                 confirmations - Bad error message
 - Bugfix #9492: Calendar: Reminder appears again and again
 - Bugfix #9514: Calendar: Reminder for recurring appointments shown 
                 more than once for each occurence

* 2007-10-16 - thorben.betten@open-xchange.com

 - Bugfix #9501: Proper setting of IMAP timeout values in properties
 - Bugfix #9700: Applying sent order direction when displaying unread
   messages
 - Bugfix #9733: Changed error message if no admin has been specified when
   either creating or updating a folder's permissions

* 2007-10-12 - marcus.klein@open-xchange.com

 - Bugfix #9790: Added delete event for contexts. Its listeners remove the file
   storage.

* 2007-10-12 - thorben.betten@open-xchange.com

 - Bugfix #9787: Checking right table when looking for user's default
   infostore folder on context deletion

* 2007-10-11 - thorben.betten@open-xchange.com

 - Bugfix #9769: Overriding IMAPFolder.exists() method in NamespaceFolder
   to prevent a NPE on namespace folder update
 - Bugfix #9756: Fallback implementation if UID EXPUNGE is not supported by
   IMAP server

* 2007-10-10 - thorben.betten@open-xchange.com

 - Bugfix #9751: Fixed non-appearing shared mail folders
 - Bugfix #9750: Avoid annoying error logging whenever an ACL entity cannot
   be mapped to system user

* 2007-10-08 - thorben.betten@open-xchange.com

 - Bugfix #9728: Proper check of intial ACls on mail folder creation

* 2007-10-05 - thorben.betten@open-xchange.com

 - Bugfix #9515: Additional check for user's module access prior to
   updating virtual list folders
 - Bugfix #9664: Fixed reges to check against IMAP folder's user flag
   support
 - Bugfix #9699: Removing only known entities from an IMAP folder's ACLs on
   update/create operation
